--- a/src/Polcode/SSRBundle/Resources/views/Default/index.html.twig
+++ b/src/Polcode/SSRBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,44 @@
-Hello {{ name }}!
+{% extends "::base.html.twig" %}
+
+{% block body %}
+    Miasto: {{ city }}!
+    
+    <div class="tablica" style="background: #aaa; padding: 50px 0;" ng-controller="TablicaController as tablica">
+        <div style="background: #000; color: #fff; margin: 0 10px; box-sizing: border-box;">
+            <h1 style="font-family: Calibri;">Przystanek</h1>
+            <table style="width: 100%; text-align: left;">
+                <tr>
+                    <th style="width: 15%; color: #fff; border-right: 3px solid #eee;"> Linia nr</th>
+                    <th style="width: 65%; color: #fff; border-right: 3px solid #eee;">Kierunek</th>
+                    <th style="width: 20%; color: #fff;">Odjazd</th>
+                </tr>
+                <tr ng-repeat="tram in tablica.trams" class="digital">
+                    <td>[[tram.line]]</td>
+                    <td>[[tram.direction]]</td>
+                    <td>[[tram.time]]</td>
+                </tr>
+                <tr class="digital">
+                    <td colspan="2"><marquee>*** POLCODE ***</marquee></td>
+                    <td>[[ tablica.datetime | date:'HH:mm' ]]</td>                    
+                </tr>
+            </table>
+        </div>
+    </div>
+    
+    <style>
+    @font-face {
+        font-family: 'Digital'; /*a name to be used later*/
+        src: url('/font/SFTelegraphic.ttf'); /*URL to font*/
+    }
+    
+    table {
+        font-size: 20pt;
+        font-family: Calibri;
+    }
+    
+    .digital {
+        color: orange;
+        font-family: Digital;
+    }
+    </style>
+{% endblock %}
