--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,7 +23,18 @@
 
             //rejestruję nowy serwis
             app.factory('$tablicaService', ['$http', function($http) {
-        		this.trams = [];
+        		this.trams = [
+      	        	{'line': '.', direction: null, time: null},
+    	        	{'line': '.', direction: 'Wybierz przystanek', time: null},
+    	        	{'line': '.', direction: null, time: null},
+    	        	{'line': '.', direction: 'z listy obok', time: null},
+    	        	{'line': '.', direction: null, time: null},
+    	        	{'line': '.', direction: null, time: null},
+    	        	{'line': '.', direction: null, time: null},
+    	        	{'line': '.', direction: null, time: null},
+    	        	{'line': '.', direction: null, time: null},
+    	        	{'line': '.', direction: null, time: null}
+    	        ];
         		var tablica = this;
 
             	return {
@@ -36,10 +47,15 @@
                     	        	{'line': '.', direction: 'Koniec kursów', time: null},
                     	        	{'line': '.', direction: null, time: null},
                     	        	{'line': '.', direction: null, time: null},
+                    	        	{'line': '.', direction: null, time: null},
+                    	        	{'line': '.', direction: null, time: null},
+                    	        	{'line': '.', direction: null, time: null},
+                    	        	{'line': '.', direction: null, time: null},
+                    	        	{'line': '.', direction: null, time: null},
                     	        	{'line': '.', direction: null, time: null}
                     	        ];
                     		} else {
-                        		for(var x = data.length; x < 5; x++) {
+                        		for(var x = data.length; x < 10; x++) {
                             		data.push({'line': '.', direction: null, time: null});
                             	}
 	                		    tablica.trams = data;
@@ -98,8 +114,9 @@
             }]);
            
         })();
+
         </script>
-        <div style="width: 15%; min-height: 100%; max-height: 100%;background: #333; float: left;">
+        <div class="slupek" id="slup">
             <h1>Przystanki</h1>
             <ul ng-controller="StopsController as st">
                 <li ng-repeat="stop in st.stops">
@@ -113,5 +130,8 @@
         </div>
         
         {% block javascripts %}{% endblock %}
+        <script type="text/javascript">
+        document.getElementById('slup').style.height = window.innerHeight + 'px';
+        </script>
     </body>
 </html>
