--- a/src/Polcode/SSRBundle/Resources/views/Default/index.html.twig
+++ b/src/Polcode/SSRBundle/Resources/views/Default/index.html.twig
@@ -26,7 +26,42 @@
     <style>
     @font-face {
         font-family: 'Digital';
-        src: url('/font/SFTelegraphic.ttf');
+        src: url('/font/SUBWT.ttf');/*SFTelegraphic.ttf');*/
+    }
+    
+    body {
+        font-family: 'Calibri', sans-serif;
+        margin: 0;
+    }
+    
+    a:link, a:visited {
+        color: #888;
+        text-decoration: none;
+    }
+    
+    a:hover {
+        color: #aaa;
+    }
+    
+    .slupek {
+        width: 15%;
+        height: 200px;
+        min-height: 100%;
+        max-height: 100%;
+        background: #222;
+        overflow: auto;
+        float: left;
+    }
+    
+    .slupek h1 {
+        color: #777;
+        margin: 0;
+    }
+    
+    .slupek ul, .slupek ul li {
+        list-style-type: none;
+        margin: 0;
+        padding: 5px;
     }
     
     .tablica h1 {
