--- a/src/Polcode/SSRBundle/Resources/views/Default/index.html.twig
+++ b/src/Polcode/SSRBundle/Resources/views/Default/index.html.twig
@@ -1,23 +1,23 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-    <div class="tablica bevel all" style="background: #aaa; padding: 50px 0;" ng-controller="TablicaController as tablica">
+    <div class="tablica bevel all" style="max-width: 1000px; background: #aaa; padding: 50px 0;">
         <div style="background: #000; color: #fff; margin: 0 10px; box-sizing: border-box;">
-            <h1 style="font-family: Calibri;">[[ tablica.getStop().name ]]</h1>
+            <h1 style="font-family: Calibri;"> tablica.getStop().name </h1>
             <table style="width: 100%; text-align: left;">
                 <tr>
                     <th style="width: 15%; color: #fff; border-right: 3px solid #eee;">Linia nr</th>
                     <th style="width: 65%; color: #fff; border-right: 3px solid #eee;">Kierunek</th>
                     <th style="width: 20%; color: #fff;">Odjazd</th>
                 </tr>
-                <tr ng-repeat="tram in tablica.getTrams()" class="digital">
+                <tr v-for="tram in trams" class="digital">
                     <td>[[tram.line]]</td>
                     <td>[[tram.direction]]</td>
                     <td>[[tram.time]]</td>
                 </tr>
                 <tr class="digital">
                     <td colspan="2">*** POLCODE ***</td>
-                    <td>[[ tablica.datetime | date:'HH:mm' ]]</td>                    
+                    <td> tablica.datetime | date:'HH:mm' </td>                    
                 </tr>
             </table>
         </div>
@@ -30,8 +30,10 @@
     }
     
     body {
+        width: 90%;
+        background: url('{{ asset('bg.jpg') }}');
         font-family: 'Calibri', sans-serif;
-        margin: 0;
+        margin: 5%;
     }
     
     a:link, a:visited {
